Prevent CSS white-space collapsing, & tweak pre-processing to accommodate

--- a/src/customCss/quill-snow-without-most-editor-css.css
+++ b/src/customCss/quill-snow-without-most-editor-css.css
@@ -32,6 +32,7 @@
   tab-size: 4;
   -moz-tab-size: 4;
   text-align: left;
+  white-space: pre-wrap;
 }
 .ql-editor > * {
   cursor: text;
